Add contributors to package.json

--- a/package.json
+++ b/package.json
@@ -8,6 +8,40 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  "contributors": [
+		{
+			"name": "Alejandro Restuccia",
+			"url": "https://github.com/ceaale"
+		},
+    {
+			"name": "Alejandro Toussaint",
+			"url": "https://github.com/"
+		},
+    {
+			"name": "Andrea Segura",
+			"url": "https://github.com/"
+		},
+    {
+			"name": "Antonella Duca",
+			"url": "https://github.com/anto-duca"
+		},
+    {
+			"name": "Carlos Aliano",
+			"url": "https://github.com/"
+		},
+    {
+			"name": "Leandro Sabus",
+			"url": "https://github.com/leasabus "
+		},
+		{
+			"name": "Emmanuel Leyan Guacache Rodríguez",
+			"url": "https://github.com/LeyCod"
+		},
+		{
+			"name": "Maximiliano Yañez",
+			"url": "https://github.com/triploide"
+		}
+	],
   "dependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
