--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     }
   ],
   "dependencies": {
+    "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.13",
     "axios": "^1.3.4",
     "postcss": "^8.4.21",
