--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
+    "react-toastify": "^9.1.2",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
