--- a/package.json
+++ b/package.json
@@ -47,9 +47,12 @@
     "autoprefixer": "^10.4.13",
     "axios": "^1.3.4",
     "postcss": "^8.4.21",
+    "quill": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-icons": "^4.7.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.8.1",
     "react-toastify": "^9.1.2",
     "tailwindcss": "^3.2.4"
