--- a/package.json
+++ b/package.json
@@ -46,8 +46,11 @@
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.13",
     "axios": "^1.3.4",
+    "dom-parser": "^0.1.6",
+    "draft-js": "^0.11.7",
     "postcss": "^8.4.21",
     "quill": "^1.3.6",
+    "quill-delta-to-html": "^0.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
@@ -55,6 +58,9 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.8.1",
     "react-toastify": "^9.1.2",
+    "slate": "^0.94.0",
+    "slate-react": "^0.94.0",
+    "sweetalert2": "^11.7.3",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
